objects/Repairs__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Repairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bicycle__c</fullName>
        <label>Bicycle</label>
        <referenceTo>Bicycle__c</referenceTo>
        <relationshipLabel>Repairs</relationshipLabel>
        <relationshipName>Repairs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repair_Type__c</fullName>
        <label>Repair Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wheels</fullName>
                </value>
                <value>
                    <fullName>Breaks</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Repairs</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Repairs Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>